# telegram-bot

./: .env.sample  .gitignore  Dockerfile  pyproject.toml
FrostBot/: __main__.py
FrostBot/commands/: buy.py  connect.py  convo.py  start.py
FrostBot/translations/: en.json
FrostBot/utils/: translations.py
src/telegram_bot/commands/: start.py  trial.py
src/translations/: en.json
src/utils/: environment.py  remnawave.py
